objects/FundingAccountDetails__mdt.object
<CustomObject>
    <description>It contains account details for different funding types</description>
    <fields>
        <fullName>BrandCode__c</fullName>
        <description>Brand Code</description>
        <label>BrandCode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BrandName__c</fullName>
        <description>Brand Name</description>
        <label>Brand Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FundingType__c</fullName>
        <description>Funding Type</description>
        <label>FundingType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GLAccountNumber__c</fullName>
        <description>GL Account Number</description>
        <label>GLAccountNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GLCostCenter__c</fullName>
        <description>GL Cost Center</description>
        <label>GLCostCenter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TransactionCode__c</fullName>
        <description>Transaction Code</description>
        <label>Transaction Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TransactionType__c</fullName>
        <description>Transaction Type</description>
        <label>Transaction Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Funding Account Details</label>
    <listViews>
        <fullName>DetailView</fullName>
        <columns>MasterLabel</columns>
        <columns>BrandCode__c</columns>
        <columns>FundingType__c</columns>
        <columns>GLAccountNumber__c</columns>
        <columns>GLCostCenter__c</columns>
        <columns>TransactionCode__c</columns>
        <filterScope>Everything</filterScope>
        <label>DetailView</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>FundingAccountDetails</pluralLabel>
</CustomObject>